--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -59,7 +59,7 @@ spec:
         - name: input
           workspace: ui-workspace
 
-
+  
     - name: build-nodejs-app
       taskRef:
         name: build-nodejs-app
@@ -74,24 +74,38 @@ spec:
         - name: input
           workspace: ui-workspace
 
-    - name: webapp-build-runtime
+    - name: create-docker-file
       taskRef:
         name: webapp-build-runtime
-      resources:
-        outputs:
-          - name: ui-image
-            resource: ui-image
       runAfter:
         - build-nodejs-app
       workspaces:
         - name: input
           workspace: ui-workspace
 
+    - name: "docker-build-push"
+      taskRef:
+        name: "buildah"
+      runAfter: 
+        - "create-docker-file"  
+      params:
+        - name: IMAGE
+          value: image-registry.openshift-image-registry.svc:5000/$(context.pipelineRun.namespace)/gui:latest
+        - name: TLSVERIFY
+          value: false
+        - name: DOCKERFILE
+          value: Dockerfile.gen
+        - name: SKIP_PUSH
+          value: false    
+      workspaces:
+        - name: source
+          workspace: ui-workspace
+           
     - name: deploy-nodejs-app
       taskRef:
         name: deploy-nodejs-app
       runAfter:
-        - webapp-build-runtime
+        - docker-build-push
       workspaces:
         - name: input
           workspace: ui-workspace
