--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "access": "public"
     },
     "dependencies": {
+        "@azure/event-hubs": "^5.8.0",
         "@fortawesome/fontawesome-free": "^6.0.0",
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
