--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "dotenv": "^8.2.0",
         "history": "^4.7.2",
         "keycloak-js": "^18.0.1",
+        "levenary": "^1.1.1",
         "merge-deep": "^3.0.3",
         "node-forge": "^1.2.1",
         "postcss": "^8.4.6",
