--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-router": "^5.1.2",
         "react-router-dom": "^5.1.2",
         "react-scripts": "^3.0.1",
+        "react-select": "^5.6.0",
         "react-toastify": "^9.0.8",
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
@@ -48,6 +49,8 @@
         "typestyle": "^2.1.0"
     },
     "scripts": {
+        
+        "start-old": "BROWSER=none react-scripts  start",
         "start": "BROWSER=none react-scripts --openssl-legacy-provider start",
         "build-old": "react-scripts  build ",
         "build": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts  build ",
