--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
     "cSpell.words": [
         "buildah",
         "keycloak",
-        "middlewares"
+        "middlewares",
+        "persistor"
     ],
     "workbench.iconTheme": "eq-material-theme-icons",
 }
