--- a/package.json
+++ b/package.json
@@ -21,17 +21,16 @@
         "@types/react-router": "^5.1.2",
         "@types/react-router-dom": "^5.1.0",
         "axios": "^0.21.2",
-        "bootstrap": "^4.3.1",
+        "bootstrap": "^5.2.2",
         "connected-react-router": "^6.9.1",
         "dotenv": "^8.2.0",
         "history": "^4.7.2",
         "keycloak-js": "^18.0.1",
-        "levenary": "^1.1.1",
         "merge-deep": "^3.0.3",
         "node-forge": "^1.3.0",
         "postcss": "^8.4.6",
         "react": "^17.0.2",
-        "react-bootstrap": "1.6.0",
+        "react-bootstrap": "^2.6.0",
         "react-datepicker": "^3.8.0",
         "react-dom": "^17.0.2",
         "react-promise-tracker": "^2.0.5",
