change envents url

--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,5 @@ REACT_APP_KEYCLOAK_URL="http://localhost:7080/"
 REACT_APP_KEYCLOAK_REALM="basic"
 REACT_APP_KEYCLOAK_CLIENT_ID="app-react"
 REACT_APP_BACKEND_URL="http://localhost:8080"
+REACT_APP_EVENT_HUB_KEY="Endpoint=sb://ehub-aitest.servicebus.windows.net/;SharedAccessKeyName=aitestsendpolicy;SharedAccessKey=il4jyhGPHTpPZ+wz0PGOhBWICkRPPrIooquJplascwY="
 
