--- a/.env.docker
+++ b/.env.docker
@@ -4,3 +4,4 @@ REACT_APP_KEYCLOAK_URL="http://192.168.178.23:7080/auth"
 REACT_APP_KEYCLOAK_REALM="basic"
 REACT_APP_KEYCLOAK_CLIENT_ID="app-react"
 REACT_APP_BACKEND_URL="/api"
+REACT_APP_EVENT_HUB_KEY=""
