--- a/.env.production
+++ b/.env.production
@@ -4,3 +4,4 @@ REACT_APP_KEYCLOAK_URL=""
 REACT_APP_KEYCLOAK_REALM="basic"
 REACT_APP_KEYCLOAK_CLIENT_ID="app-react"
 REACT_APP_BACKEND_URL="/api"
+REACT_APP_EVENT_HUB_KEY="Endpoint=sb://ehub-aitest.servicebus.windows.net/;SharedAccessKeyName=aitestsendpolicy;SharedAccessKey=il4jyhGPHTpPZ+wz0PGOhBWICkRPPrIooquJplascwY=
