--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,4 @@ REACT_APP_KEYCLOAK_URL="http://localhost:7080"
 REACT_APP_KEYCLOAK_REALM="geektour"
 REACT_APP_KEYCLOAK_CLIENT_ID="geektourclient"
 REACT_APP_BACKEND_URL="http://localhost:8080"
+REACT_APP_EVENT_HUB_KEY=""
