--- a/.rhone.yaml
+++ b/.rhone.yaml
@@ -1,12 +1,11 @@
 ---
 apiVersion: build.rhone.io/v1
 contributors:
-- email: nikolaj@majorov.biz
-  name: Nikolaj Majorov
+    - email: nikolaj@majorov.biz
+      name: Nikolaj Majorov
 interpreter-version: lts
 language: node_js
 name: expenses-ui
 version: 0.1.0
 scripts:
-  - preBuild: "yarn add create-react-app"
-
+    - preBuild: 'deno run build'
