--- a/deno.json
+++ b/deno.json
@@ -15,8 +15,22 @@
         "react-dom": "npm:react-dom@^19.1.0",
         "react-router-dom": "npm:react-router-dom@^7.5.1",
         "vite": "npm:vite@^6.3.2",
+        "bootstrap": "npm:bootstrap@^4.3.1",
         "react-bootstrap": "npm:react-bootstrap@^1.6.6",
-        "react-datepicker": "npm:react-datepicker@^^3.8.0"
+        "react-datepicker": "npm:react-datepicker@^3.8.0",
+        "axios": "npm:axios@^0.21.2",
+        "react-redux": "npm:react-redux@^7.2.4",
+        "redux-persist": "npm:redux-persist@^6.0.0",
+        "redux": "npm:redux@^4.0.5",
+        "redux-thunk": "npm:redux-thunk@^2.3.0",
+        "connected-react-router": "npm:connected-react-router@^6.9.1",
+        "typesafe-actions": "npm:typesafe-actions@^5.1.0",
+        "@fortawesome/fontawesome-free": "npm:@fortawesome/fontawesome-free@^6.0.0",
+        "@fortawesome/fontawesome-svg-core": "npm:@fortawesome/fontawesome-svg-core@^1.3.0",
+        "@fortawesome/free-solid-svg-icons": "npm:@fortawesome/free-solid-svg-icons@^6.0.0",
+        "@fortawesome/react-fontawesome": "npm:@fortawesome/react-fontawesome@^0.1.17",
+        "typestyle": "npm:typestyle@^2.1.0",
+        "history": "npm:history@^4.7.2"
     },
     "compilerOptions": {
         "types": ["react", "react-dom", "@types/react"],
