add login dispatch

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "buildah",
         "keycloak",
         "middlewares",
-        "persistor"
+        "persistor",
+        "typesafe"
     ],
     "workbench.iconTheme": "eq-material-theme-icons",
 }
