--- a/deno.json
+++ b/deno.json
@@ -10,6 +10,7 @@
     "imports": {
         "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.5",
         "@oak/oak": "jsr:@oak/oak@^17.1.6",
+        "@reduxjs/toolkit": "npm:@reduxjs/toolkit@^2.9.0",
         "@std/assert": "jsr:@std/assert@^1.0.14",
         "@types/react": "npm:@types/react@^19.1.13",
         "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.7.0",
