--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,9 @@
 {
-   " nodeModulesDir": "auto",
+    " nodeModulesDir": "auto",
 
     "tasks": {
         "dev": "deno run -A --node-modules-dir=auto npm:vite",
-        "build": "deno run -A --node-modules-dir=auto npm:vite build",
+        "build": "deno run -A --node-modules-dir npm:vite build",
         "server:start": "deno run -A --node-modules-dir --watch ./server/main.ts",
         "serve": "deno task build && deno task server:start"
     },
